# soccer-dataset

./: .gitignore  README.md  pyproject.toml
config/: settings.yaml
src/flashscore_scraper/: __init__.py  __main__.py  config.py  constants.py
src/flashscore_scraper/exporters/: __init__.py  csv.py  json.py  parquet.py
src/flashscore_scraper/models/: __init__.py  event.py  match.py  odds.py  score.py  statistic.py  team.py
src/flashscore_scraper/scraper/: __init__.py  base.py  match_detail.py  match_list.py
src/flashscore_scraper/utils/: __init__.py  parsing.py  retry.py
tests/: __init__.py  test_exporters.py  test_models.py  test_parsing.py
